--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -52,6 +52,7 @@
         </div>
         {% endif %}
     </div>
+    {% if reviews %}
     <div class="dropdown">
       <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
       <div class="dropdown-menu" aria-labelledby="sortOptions">
@@ -61,14 +62,12 @@
         <button id="lowrating-sort-btn"class="dropdown-item" type="button">Lowest Rating</button>
       </div>
     </div>
+    {% endif %}
 
     {% include "reviews/reviews.html" with reviews=reviews %}
-</div>
+    </div>
 {% endblock %}
-
 
 {% block js %}
 <script type="module" src="{% static 'reviews/review.js' %}"></script>
-<script type="module" src="{% static 'reviews/sort_reviews.js' %}"></script>
-<script type="module" src="{% static 'common/sorting.js' %}"></script>
 {% endblock %}
