Small syntax fixes

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -19,7 +19,7 @@
         <div id="result-nav" class="result-nav row mb-5">
           <div class="col-12">
             <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-              <a class="btn bg-indigo text-white" disabled>See results for</a>
+              <a class="btn bg-tcf-indigo text-white" disabled>See results for</a>
               <a href="#departments" type="button" class="btn btn-light">Departments</a>
               <a href="#courses" type="button" class="btn btn-light">Courses</a>
               <a href="#instructors" type="button" class="btn btn-light">Instructors</a>
