--- a/tcf_website/templates/browse/grouped_schools.html
+++ b/tcf_website/templates/browse/grouped_schools.html
@@ -14,5 +14,18 @@
             </ul>
           </li>
       {% endfor %}
+      <!-- Adding Miscellaneous schools at the end -->
+      {% if misc_school != None %}
+        <li>
+          <h6 class="font-weight-bold">{{misc_school}}</h6>
+          <ul class="department-list">
+            {% for d in misc_school.department_set.all %}
+              <li>
+                <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
+              </li>
+            {% endfor %}
+          </ul>
+        </li>
+      {% endif %}
   </ul>
 {% endblock %}
