--- a/tcf_website/templates/about/privacy.html
+++ b/tcf_website/templates/about/privacy.html
@@ -84,7 +84,7 @@
     <h4>Terms of Use, Notices and Revisions</h4>
     <p>Your use of theCourseForum, and any disputes arising from it, is subject to this Privacy Policy as well as our Terms of Use and all of its dispute resolution provisions including arbitration, limitation on damages and choice of law. We reserve the right to change our Privacy Policy and our Terms of Use at any time. Non-material changes and clarifications will take effect immediately, and material changes will take effect within 30 days of their posting on this site. If we make changes, we will post them and will indicate at the top of this page the policy's new effective date. If we make material changes to this policy, we will notify you here, by email, or through notice on our home page. We encourage you to refer to this policy on an ongoing basis so that you understand our current privacy policy. Unless stated otherwise, our current privacy policy applies to all information that we have about you and your account.</p>
 
-    <h4>Contacting the Web Site</h4>
+    <h4>Contacting the Website</h4>
     <p>If you have any questions about this privacy policy, please contact us at privacy@theCourseForum.com.</p>
   </div>
 </div>
