collecting majors at initial sign up

--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -9,6 +9,182 @@
     <div class="form-group">
         <div id="course-form-input" class="input-group">
             Please enter your graduation year: {{ form.grad_year }} <br>
+            Please enter your major:
+            <input list="first_major" name= "first_majors" id = "first_majors">
+            <datalist id="first_major">
+                <option value="African American & African Studies">
+                <option value="American Studies">
+                <option value="Anthropology">
+                <option value="Art History">
+                <option value="Art, Studio">
+                <option value="Astronomy">
+                <option value="Astronomy-Physics">
+                <option value="Biology">
+                <option value="Chemistry">
+                <option value="Chinese Language & Literature">
+                <option value="Classics">
+                <option value="Cognitive Science">
+                <option value="Comparative Literature">
+                <option value="Computer Science">
+                <option value="Drama">
+                <option value="East Asian Studies">
+                <option value="Economics">
+                <option value="English">
+                <option value="Environmental Sciences">
+                <option value="Environmental Thought & Practice">
+                <option value="French">
+                <option value="German">
+                <option value="Global Studies">
+                <option value="History">
+                <option value="Human Biology">
+                <option value="Italian">
+                <option value="Japanese Language & Literature">
+                <option value="Jewish Studies">
+                <option value="Latin American Studies">
+                <option value="Linguistics">
+                <option value="Mathematics">
+                <option value="Media Studies">
+                <option value="Medieval Studies">
+                <option value="Middle Eastern and South Asian Languages and Cultures">
+                <option value="Music">
+                <option value="Neuroscience">
+                <option value="Philosophy">
+                <option value="Physics">
+                <option value="Political and Social Thought">
+                <option value="Political Philosophy, Policy, and Law">
+                <option value="Politics">
+                <option value="Psychology">
+                <option value="Religious Studies">
+                <option value="Slavic Languages and Literatures">
+                <option value="Sociology">
+                <option value="South Asian Studies">
+                <option value="Spanish">
+                <option value="Statistics">
+                <option value="Women, Gender, and Sexuality">
+                <option value="Aerospace Engineering">
+                <option value="Biomedical Engineering">
+                <option value="Chemical Engineering">
+                <option value="Civil Engineering">
+                <option value="Computer Engineering">
+                <option value="Computer Science">
+                <option value="Electrical Engineering">
+                <option value="Engineering Science">
+                <option value="Mechanical Engineering">
+                <option value="Systems Engineering">
+                <option value="Mcintire School of Commerce: Accounting">
+                <option value="Mcintire School of Commerce: Finance">
+                <option value="IMcintire School of Commerce: nformation Technology">
+                <option value="Mcintire School of Commerce: Management">
+                <option value="Mcintire School of Commerce: Marketing">
+                <option value="Architectural History">
+                <option value="Architecture">
+                <option value="Urban & Environmental Planning">
+                <option value="Nursing">
+                <option value="Public Policy and Research">
+                <option value="Kinesiology">
+                <option value="Speech Communications Disorders">
+                <option value="Youth & Social Innovation">
+                <option value="Teacher Education: Early Childhood Education">
+                <option value="Teacher Education: Elementary Education">
+                <option value="Teacher Education: Special Education">
+                <option value="Teacher Education: Elementary Education">
+                <option value="Teacher Education: English Education">
+                <option value="Teacher Education: English as a Second Language Education">
+                <option value="Teacher Education: Foreign Language Education">
+                <option value="Teacher Education: Mathematics Education">
+                <option value="Teacher Education: Science Education">
+                <option value="Teacher Education: Social Studies Education">
+                <option value="Teacher Education: Special Education">
+            </datalist>
+            <br>
+            Please enter your second major, if applicable:
+            <input list="second_major" name= "second_majors" id = "second_majors">
+            <datalist id="second_major">
+                <option value="African American & African Studies">
+                <option value="American Studies">
+                <option value="Anthropology">
+                <option value="Art History">
+                <option value="Art, Studio">
+                <option value="Astronomy">
+                <option value="Astronomy-Physics">
+                <option value="Biology">
+                <option value="Chemistry">
+                <option value="Chinese Language & Literature">
+                <option value="Classics">
+                <option value="Cognitive Science">
+                <option value="Comparative Literature">
+                <option value="Computer Science">
+                <option value="Drama">
+                <option value="East Asian Studies">
+                <option value="Economics">
+                <option value="English">
+                <option value="Environmental Sciences">
+                <option value="Environmental Thought & Practice">
+                <option value="French">
+                <option value="German">
+                <option value="Global Studies">
+                <option value="History">
+                <option value="Human Biology">
+                <option value="Italian">
+                <option value="Japanese Language & Literature">
+                <option value="Jewish Studies">
+                <option value="Latin American Studies">
+                <option value="Linguistics">
+                <option value="Mathematics">
+                <option value="Media Studies">
+                <option value="Medieval Studies">
+                <option value="Middle Eastern and South Asian Languages and Cultures">
+                <option value="Music">
+                <option value="Neuroscience">
+                <option value="Philosophy">
+                <option value="Physics">
+                <option value="Political and Social Thought">
+                <option value="Political Philosophy, Policy, and Law">
+                <option value="Politics">
+                <option value="Psychology">
+                <option value="Religious Studies">
+                <option value="Slavic Languages and Literatures">
+                <option value="Sociology">
+                <option value="South Asian Studies">
+                <option value="Spanish">
+                <option value="Statistics">
+                <option value="Women, Gender, and Sexuality">
+                <option value="Aerospace Engineering">
+                <option value="Biomedical Engineering">
+                <option value="Chemical Engineering">
+                <option value="Civil Engineering">
+                <option value="Computer Engineering">
+                <option value="Computer Science">
+                <option value="Electrical Engineering">
+                <option value="Engineering Science">
+                <option value="Mechanical Engineering">
+                <option value="Systems Engineering">
+                <option value="Mcintire School of Commerce: Accounting">
+                <option value="Mcintire School of Commerce: Finance">
+                <option value="IMcintire School of Commerce: nformation Technology">
+                <option value="Mcintire School of Commerce: Management">
+                <option value="Mcintire School of Commerce: Marketing">
+                <option value="Architectural History">
+                <option value="Architecture">
+                <option value="Urban & Environmental Planning">
+                <option value="Nursing">
+                <option value="Public Policy and Research">
+                <option value="Kinesiology">
+                <option value="Speech Communications Disorders">
+                <option value="Youth & Social Innovation">
+                <option value="Teacher Education: Early Childhood Education">
+                <option value="Teacher Education: Elementary Education">
+                <option value="Teacher Education: Special Education">
+                <option value="Teacher Education: Elementary Education">
+                <option value="Teacher Education: English Education">
+                <option value="Teacher Education: English as a Second Language Education">
+                <option value="Teacher Education: Foreign Language Education">
+                <option value="Teacher Education: Mathematics Education">
+                <option value="Teacher Education: Science Education">
+                <option value="Teacher Education: Social Studies Education">
+                <option value="Teacher Education: Special Education">
+            </datalist>
+            <br>
             <input type="submit" value="Submit"> 
         </div>
     </div>
