--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -2,43 +2,64 @@
 {% load static %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'course/course.css' %}" />
-<link rel="stylesheet" href="{% static 'common/rating_card.css' %}" />
-<link rel="stylesheet" href="{% static 'common/show-hide.css' %}" />
-<link rel="stylesheet" href="{% static 'common/toolbar.css' %}" />
+    <link rel="stylesheet" href="{% static 'course/course.css' %}"/>
+    <link rel="stylesheet" href="{% static 'common/rating_card.css' %}"/>
+    <link rel="stylesheet" href="{% static 'common/show-hide.css' %}"/>
+    <link rel="stylesheet" href="{% static 'common/toolbar.css' %}"/>
 {% endblock %}
 
+
+
 {% block content %}
-<div class="course container">
-    {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" %}
-      
-    <div class="instructors container-lg mt-3">
-        <div class="d-md-flex align-items-baseline my-3">
-            <h1 class="mr-md-3">{{ course.code }}</h1>
-            <h2>{{ course.title }}</h2>
+
+    <div class="course container">
+        {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" %}
+
+        <div class="instructors container-lg mt-3">
+            <div class="d-md-flex align-items-baseline my-3">
+                <h1 class="mr-md-3">{{ course.code }}</h1>
+                <h2>{{ course.title }}</h2>
+            </div>
+            {#            <button type="button" >#}
+            <a target="_blank"
+               data-toggle="tooltip"
+               data-placement="top"
+               title="Requires NetBadge Login"
+               href={{ course.eval_link }}>
+                Official UVA Student Evaluations
+                <img src="{% static 'course/expand.png' %}">
+            </a>
+            <br/>
+            <br/>
+
+            <ul class="instructor-list">
+                {% for i in recent_instructors %}
+                    <li class="instructor">
+                        {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
+                        {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty last_taught=course.semester_last_taught %}
+                    </li>
+                {% endfor %}
+                {% for i in old_instructors %}
+                    <li class="instructor old">
+                        {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
+                        {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty %}
+                    </li>
+                {% endfor %}
+            </ul>
         </div>
-        <button type="button" ><a href={{course.eval_link}}>Student Evaluations (Requires NetBadge login)</a></button>
-        <ul class="instructor-list">
-        {% for i in recent_instructors %}
-            <li class="instructor">
-                {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
-                {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty last_taught=course.semester_last_taught %}
-            </li>
-        {% endfor %}
-        {% for i in old_instructors %}
-            <li class="instructor old">
-                {% url 'course_instructor' course_id=course.pk instructor_id=i.pk as link %}
-                {% include "common/rating_card.html" with title=i.full_name link=link rating=i.rating difficulty=i.difficulty %}
-            </li>
-        {% endfor %}
-        </ul>
+
+
     </div>
-
-
-</div>
 {% endblock %}
 
 
 {% block js %}
-<script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
+    <script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
+
+    {#initializes Bootstrap tooltips#}
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 {% endblock %}
