--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -15,7 +15,7 @@
     {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="Last 5 Years" sorting=True%}
 
     <div class="subdepartments mt-3">
-        {% for sd in department.subdepartment_set.all %}
+        {% for sd in subdepartments %}
         <div class="subdepartment container-lg {% if not sd.has_current_course %}old{% endif %}">
             <h1 class="my-3">{{ sd.name }}</h1>
             <ul class="course-list" id="courses-sd-{{sd.id}}">
@@ -37,7 +37,7 @@
 <script type="module">
     import { loadPage } from "{% static 'department/loadMoreCourses.js' %}";
 
-    {% for sd in department.subdepartment_set.all %}
+    {% for sd in subdepartments %}
         loadPage("{{sd.id}}", "/api/courses/?page=1&page_size=30&subdepartment={{sd.id}}&stats&recent5years");
     {% endfor %}
 </script>
