--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="{% static 'common/rating_card.css' %}"/>
     <link rel="stylesheet" href="{% static 'common/show-hide.css' %}"/>
     <link rel="stylesheet" href="{% static 'common/toolbar.css' %}"/>
+    <link rel="stylesheet" href="{% static 'instructor/instructor.css' %}"/>
 {% endblock %}
 
 {% block content %}
     <div class="container text-center">
-        <div class="card mb-5">
+        <div class="card">
             <div class="card-header py-4">
                 <h3 class="card-title">
                     {{ instructor.full_name }}
@@ -17,24 +18,18 @@
                 {{ instructor.email }}
             </div>
             <div class="card-body">
-                Average Ratings
-                <div class="row">
-                    <div class="col">
-                        Average rating: {{ avg_rating }}
-                    </div>
-                    <div class="col">
-                        Average difficulty: {{ avg_difficulty }}
-                    </div>
+                <h6>Average Ratings</h6>
+                <div class="mt-4 d-flex justify-content-around">
+                    <p><i class="fas fa-user"></i> {{ avg_rating }}</p>
+                    <p><i class="fas fa-dumbbell"></i> {{ avg_difficulty }}</p>
+                    <p><i class="fas fa-thumbs-up"></i></p>
+                    <p><i class="fas fa-hourglass-half"></i> {{ avg_hours }}</p>
                 </div>
             </div>
         </div>
-        {#        <h3>[Department]</h3>#}
-        {#        {% for course in courses %}#}
-
-        {#        {% endfor %}#}
         {% if courses %}
             {% for dept, dept_data in courses.items %}
-                <h3>{{ dept }}</h3>
+                <h3 class="mt-5">{{ dept }}</h3>
                 {% for course in dept_data.courses %}
                     <div class="card mt-3">
                         <a href="{% url 'course' course_id=course.id %}">
@@ -42,13 +37,12 @@
                                 {{ course.name }}
                             </div>
                         </a>
-                        <div class="card-body">
-                            <i class="fas fa-star">{{ course.avg_rating }}</i>
-                            <i class="fas fa-user"></i>
-                            <i class="fas fa-skull-crossbones"> {{ course.avg_difficulty }}</i>
-                            <i class="fas fa-thumbs-up"></i>
-                            <i class="fas fa-hourglass-half"> {{ course.avg_hours }}</i>
-                            Last taught {{ course.last_taught }}
+                        <div class="card-body d-flex justify-content-around">
+                            <p><i class="fas fa-star"></i> {{ course.avg_rating }}</p>
+                            <p><i class="fas fa-dumbbell"></i> {{ course.avg_difficulty }}</p>
+                            <p><i class="fas fa-thumbs-up"></i></p>
+                            <p><i class="fas fa-hourglass-half"></i> {{ course.avg_hours }}</p>
+                            <p>Last taught {{ course.last_taught }}</p>
                         </div>
                     </div>
                 {% endfor %}
