--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -11,7 +11,9 @@
       href="{% static 'base/img/new_logo.png' %}">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static 'base/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+          crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
 
     <!-- tCF Custom Styling -->
