Fix jQuery and bootstrap.bundle.min.js as well

--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -34,8 +34,12 @@
   {% endblock %}
 
   <!-- Bootstrap core JavaScript -->
-  <script src="{% static 'base/jquery-3.4.1.min.js' %}"></script>
-  <script src="{% static 'base/bootstrap.bundle.min.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+          integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+          crossorigin="anonymous"></script>
 
   {% block basejs %}
   {% endblock %}
