--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -18,108 +18,117 @@
 
         <div id="result-nav" class="result-nav row mb-5">
           <div class="col-12">
-            <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+            <div class="btn-group btn-group-sm" role="group">
               <a class="btn bg-tcf-indigo text-white" disabled>See results for</a>
-              <a href="#departments" type="button" class="btn btn-light">Departments</a>
-              <a href="#courses" type="button" class="btn btn-light">Courses</a>
-              <a href="#instructors" type="button" class="btn btn-light">Instructors</a>
+              <a href="#courses" id="course-tab" class="btn btn-light collapsed" role="button"
+                 data-toggle="collapse" aria-expanded="true" aria-controls="courses">
+                Courses</a>
+              <a href="#departments" id="department-tab" class="btn btn-light collapsed" role="button"
+                data-toggle="collapse" aria-expanded="false" aria-controls="departments">
+                Departments</a>
+              <a href="#instructors" id="instructor-tab" class="btn btn-light collapsed" role="button"
+                 data-toggle="collapse" aria-expanded="false" aria-controls="instructors">
+                Instructors</a>
             </div>
           </div>
         </div>
 
-        <div id="departments" class="row mb-5">
-          <div class="col-12">
+        <div class="accordion" id="results">
 
-            <div class="search-result-header mb-3">
-              <h3>Departments</h3>
-              &nbsp;&nbsp;&nbsp;
-              <p class="text-muted">{{ courses|length }} results</p>
-            </div>
-            {% if courses %}
-              <ul class="list-unstyled searched-instructors">
-              {% for dept, dept_data in courses.items %}
-                <li class="my-2">
-                  <a href="{% url 'department' dept_id=dept_data.dept_id %}">
-                    <div class="row p-0 text-left">
-                      <div class="col-sm-3">{{ dept }}</div>
-                      <div class="col-sm-9">{{ dept_data.subdept_name }}</div>
-                    </div>
-                  </a>
-                </li>
-              {% endfor %}
-              </ul>
-            {% else %}
-            <p>No departments matched your search.</p>
-            {% endif %}
-          </div>
-        </div>
+          <div id="courses" class="row mb-5 collapse show"
+               aria-labelledby="course-tab" data-parent="#results">
+            <div class="col-12">
 
-        <hr>
+              <div class="search-result-header mb-3">
+                <h3>Courses</h3>
+                &nbsp;&nbsp;&nbsp;
+                {% if courses %}
+                <p class="text-muted">15 results</p>
+                {% else %}
+                <p class="text-muted">0 results</p>
+                {% endif %}
+              </div>
 
-        <div id="courses" class="row mb-5">
-          <div class="col-12">
-
-            <div class="search-result-header my-3">
-              <h3>Courses</h3>
-              &nbsp;&nbsp;&nbsp;
               {% if courses %}
-              <p class="text-muted">15 results</p>
+                {% for dept, dept_data in courses.items %}
+                <div class="row mb-5">
+                  <div class="col-12">
+                    <h5><a href="{% url 'department' dept_id=dept_data.dept_id %}">{{ dept }} / {{ dept_data.subdept_name }}</a></h5>
+                    <ul class="list-group searched-department-courses">
+                        {% for c in dept_data.courses %}
+                            {% if c != dept_data.courses.0 %}
+                            {% endif %}
+                            <li class="list-group-item list-group-item-light text-dark p-2">
+                              <a href="{% url 'course' course_id=c.id %}">
+                              <div class="row p-0">
+                                <div class="col-md-3">{{ c.mnemonic }}</div>
+                                <div class="col-md-9">{{ c.title }}</div>
+                              </div>
+                              </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                  </div>
+                </div>
+                {% endfor %}
               {% else %}
-              <p class="text-muted">0 results</p>
+              <p>No courses matched your search.</p>
               {% endif %}
             </div>
+          </div>
 
-            {% if courses %}
-              {% for dept, dept_data in courses.items %}
-              <div class="row mb-5">
-                <div class="col-12">
-                  <h5><a href="{% url 'department' dept_id=dept_data.dept_id %}">{{ dept }} / {{ dept_data.subdept_name }}</a></h5>
-                  <ul class="list-group searched-department-courses">
-                      {% for c in dept_data.courses %}
-                          {% if c != dept_data.courses.0 %}
-                          {% endif %}
-                          <li class="list-group-item list-group-item-light text-dark p-2">
-                            <a href="{% url 'course' course_id=c.id %}">
-                            <div class="row p-0">
-                              <div class="col-md-3">{{ c.mnemonic }}</div>
-                              <div class="col-md-9">{{ c.title }}</div>
-                            </div>
-                            </a>
-                          </li>
-                      {% endfor %}
-                  </ul>
-                </div>
+          <div id="departments" class="row mb-5 collapse"
+               aria-labelledby="department-tab" data-parent="#results">
+            <div class="col-12">
+
+              <div class="search-result-header mb-3">
+                <h3>Departments</h3>
+                &nbsp;&nbsp;&nbsp;
+                <p class="text-muted">{{ courses|length }} results</p>
               </div>
-              {% endfor %}
-            {% else %}
-            <p>No courses matched your search.</p>
-            {% endif %}
-          </div>
-        </div>
-
-        <hr>
-
-        <div id="instructors" class="row mb-5">
-          <div class="col-12">
-            <div class="search-result-header my-3">
-              <h3>Instructors</h3>
-              &nbsp;&nbsp;&nbsp;
-              <p class="text-muted">{{ instructors|length }} results</p>
+              {% if courses %}
+                <ul class="list-unstyled searched-instructors">
+                {% for dept, dept_data in courses.items %}
+                  <li class="my-2">
+                    <a href="{% url 'department' dept_id=dept_data.dept_id %}">
+                      <div class="row p-0 text-left">
+                        <div class="col-sm-3">{{ dept }}</div>
+                        <div class="col-sm-9">{{ dept_data.subdept_name }}</div>
+                      </div>
+                    </a>
+                  </li>
+                {% endfor %}
+                </ul>
+              {% else %}
+              <p>No departments matched your search.</p>
+              {% endif %}
             </div>
-            {% if instructors %}
-              <ul class="list-unstyled searched-instructors text-left">
-              {% for i in instructors %}
-                <li class="my-2">
-                  <a href="{% url 'instructor' instructor_id=i.id %}">
-                      {{ i.first_name }} {{ i.last_name }}
-                  </a>
-                </li>
-              {% endfor %}
-              </ul>
-            {% else %}
-                <p>No professors matched your search.</p>
-            {% endif %}
           </div>
+
+          <div id="instructors" class="row mb-5 collapse"
+               aria-labelledby="instructor-tab" data-parent="#results">
+            <div class="col-12">
+              <div class="search-result-header mb-3">
+                <h3>Instructors</h3>
+                &nbsp;&nbsp;&nbsp;
+                <p class="text-muted">{{ instructors|length }} results</p>
+              </div>
+              {% if instructors %}
+                <ul class="list-unstyled searched-instructors text-left">
+                {% for i in instructors %}
+                  <li class="my-2">
+                    <a href="{% url 'instructor' instructor_id=i.id %}">
+                        {{ i.first_name }} {{ i.last_name }}
+                    </a>
+                  </li>
+                {% endfor %}
+                </ul>
+              {% else %}
+                  <p>No professors matched your search.</p>
+              {% endif %}
+            </div>
+          </div>
+
         </div>
 
       </div>
