Fix tab collapse bug

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -135,3 +135,15 @@
 
     </div>
 {% endblock %}
+
+{% block js %}
+  <script>
+    $('[data-toggle=collapse]').on('click', function (e) {
+        e.preventDefault();
+        if(! $(this).hasClass('collapsed')){
+            e.stopPropagation();
+            return false;
+        }
+    });
+  </script>
+{% endblock %}
