--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -16,6 +16,7 @@
 
       <div class="search-results container p-5">
 
+        <!-- Tabs for displaying result categories: Courses, Departments, Instructors -->
         <div id="result-nav" class="result-nav row mb-5">
           <div class="col-12">
             <div class="btn-group btn-group-sm" role="group">
@@ -33,8 +34,10 @@
           </div>
         </div>
 
-        <div class="accordion" id="results">
+        <!-- The current result category that is displayed -->
+        <div id="results" class="accordion">
 
+          <!-- Course results -->
           <div id="courses" class="row mb-5 collapse show"
                aria-labelledby="course-tab" data-parent="#results">
             <div class="col-12">
@@ -77,6 +80,7 @@
             </div>
           </div>
 
+          <!-- Department results -->
           <div id="departments" class="row mb-5 collapse"
                aria-labelledby="department-tab" data-parent="#results">
             <div class="col-12">
@@ -105,6 +109,7 @@
             </div>
           </div>
 
+          <!-- Instructor results -->
           <div id="instructors" class="row mb-5 collapse"
                aria-labelledby="instructor-tab" data-parent="#results">
             <div class="col-12">
@@ -138,12 +143,16 @@
 
 {% block js %}
   <script>
-    $('[data-toggle=collapse]').on('click', function (e) {
-        e.preventDefault();
-        if(! $(this).hasClass('collapsed')){
+    // Search results should display some content at all times
+    // Thus the current open accordion will not be able to close itself
+    $('[data-toggle="collapse"]').on('click',function(e) {
+      e.preventDefault();
+      if ( $(this).parents('.accordion').find('.collapse.show') ) {
+        var idx = $(this).index('[data-toggle="collapse"]');
+        if (idx == $('.collapse.show').index('.collapse')) {
             e.stopPropagation();
-            return false;
         }
+      }
     });
   </script>
 {% endblock %}
