Changed footer to indigo as requested

--- a/tcf_website/templates/landing/dashboard.html
+++ b/tcf_website/templates/landing/dashboard.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<!-- A placeholder dashboard page, currently unused -->
 <div class="jumbotron">
     <h1 class="display-4">Welcome to theCourseForum
     </h1>
