--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -219,7 +219,7 @@
 <div>
 
 <!-- Footer -->
-<footer class="footer py-3 bg-tcf-orange text-white link-white">
+<footer class="footer py-3 bg-tcf-indigo text-white link-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
