Fix right margin bug

--- a/tcf_website/templates/landing/dashboard.html
+++ b/tcf_website/templates/landing/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
+<link rel="stylesheet" href="{% static 'landing/dashboard.css' %}" />
 {% endblock %}
 
 {% block content %}
