--- a/tcf_website/static/landing/landing.css
+++ b/tcf_website/static/landing/landing.css
@@ -1,11 +1,85 @@
-@media (max-width: 768px) {
-    .display-4 {
-        font-size: 3rem;
-    }
+/* Html Classes */
+
+.container-fluid {
+  overflow: hidden;
 }
 
-@media (max-width: 576px) {
-    .display-4 {
-        font-size: 2rem;
-    }
+/* Navbar */
+nav.navbar {
+  background-color: white;
+}
+
+/* Masthead */
+header.masthead {
+  position: relative;
+}
+
+header.masthead h1 {
+  font-size: 2rem;
+}
+.about-link {
+  font-size: 2rem;
+  line-height: 120%;
+}
+@media (min-width: 768px) {
+  header.masthead h1 {
+    font-size: 3rem;
+  }
+  .about-link {
+    font-size: 1.25rem;
+  }
+}
+
+/* Features */
+.features-icons .card {
+  box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
+}
+.features-icons .card:hover {
+  box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+
+.features-icons .features-icons-item {
+  max-width: 20rem;
+}
+
+.features-icons .features-icons-item .features-icons-icon {
+  height: 7rem;
+  color: var(--main-color);
+  text-shadow: 10px 10px 50px var(--accent-color);
+}
+
+.features-icons .features-icons-item .features-icons-icon i {
+  font-size: 4.5rem;
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i {
+  font-size: 5rem;
+}
+
+
+/* About team */
+/* About member photo hover animation */
+.about-team .about-pfp {
+  overflow: hidden;
+}
+.about-team .about-pfp img{
+  transition: all 0.5s ease;
+  box-shadow: 5px 5px 0px var(--accent-color);
+}
+.about-team .about-pfp:hover img{
+  transform: scale(1.1);
+}
+.about-team .about-member{
+  border: 0px;
+}
+.about-team .about-link:hover{
+  box-shadow: 2px 2px 5px var(--main-color);
+}
+/* About info box */
+.about-team .about-info {
+  border: 3px solid var(--accent-color);
+  border-radius: 0%;
+}
+.about-team .about-info:hover {
+  box-shadow: 4px 4px 10px var(--accent-color);
 }
